--- a/RestaurantSigloXXI/Vista/WPFStockPlato.xaml
+++ b/RestaurantSigloXXI/Vista/WPFStockPlato.xaml
@@ -1,14 +1,69 @@
-﻿<Page x:Class="Vista.WPFStockPlato"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Vista"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="WPFStockPlato">
+﻿<Controls:MetroWindow x:Class="Vista.WPFStockPlato"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:local="clr-namespace:Vista"
+        mc:Ignorable="d"
+        BorderThickness="2" BorderBrush="Black"
+        Title="Administrar Stock de Plato" Height="568.739" Width="818.232" WindowStartupLocation="CenterScreen" Cursor="Arrow" FontWeight="Bold" WindowTitleBrush="Black" Icon="Imagenes/LogoFinal2 .png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Background="#FFDBDFE3" Closing="MetroWindow_Closing" >
+    <Grid HorizontalAlignment="Left" Height="549" VerticalAlignment="Top" Width="808" Margin="0,0,0,-12.333">
+        <Image x:Name="image" HorizontalAlignment="Left" Height="553" VerticalAlignment="Top" Width="823" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-15,-4"/>
+        <GroupBox x:Name="groupBox" Header="Actualizar Stock de Plato" Margin="39,304,41,0" VerticalAlignment="Top" Height="139" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+            <Grid HorizontalAlignment="Left" Height="106" VerticalAlignment="Top" Width="663" Margin="39,0,0,-2" Background="{x:Null}">
+                <TextBox x:Name="txtNombre" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="" Height="8" Margin="95,5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="156" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="False" RenderTransformOrigin="0.5,0.5" SelectionBrush="#FFCB5F21" IsEnabled="False"/>
+                <TextBox x:Name="txtStock" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Stock" KeyDown="txtNumeros_KeyDown" Height="8" Margin="95,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="156" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21" />
+                <Button x:Name="btnCancelar" ToolTip="Cancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="475,72,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCancelar_Click"/>
+                <Button x:Name="btnLimpiar" ToolTip="Limpiar Casillas" Content="Limpiar" HorizontalAlignment="Left" Margin="23,71,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnLimpiar_Click"/>
+                <Button x:Name="btnModificar" ToolTip="Guardar Registro"  Content="Guardar" HorizontalAlignment="Left" Margin="120,71,0,0" VerticalAlignment="Top" Cursor="Arrow" Width="80" FontWeight="Normal"   mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnModificar_Click" />
+                <Image x:Name="image1" HorizontalAlignment="Left" Height="86" Margin="285,5,0,0" VerticalAlignment="Top" Width="151" Source="Imagenes/logoFinal3.png" RenderTransformOrigin="1.091,0.822"/>
+                <Label x:Name="label_Copy7" Content="Stock:" HorizontalAlignment="Left" Margin="23,35,0,0" VerticalAlignment="Top" FontSize="12"/>
 
-    <Grid>
-        
+                <Label x:Name="lblId" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="23,1,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy1" Content="Nombre:" HorizontalAlignment="Left" Margin="23,5,0,0" VerticalAlignment="Top" FontSize="12"/>
+
+
+            </Grid>
+        </GroupBox>
+        <GroupBox x:Name="groupBox1" Header="Respaldo Caché" HorizontalAlignment="Left" Height="69" Margin="39,446,0,0" VerticalAlignment="Top" Width="728" Background="#FFCB5F21" BorderBrush="#FFCB5F21">
+            <Grid>
+                <Label x:Name="label2" Content="Útimo Respaldo:" HorizontalAlignment="Left" Margin="39,1,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                <Label x:Name="lblCache" Content="" HorizontalAlignment="Left" Margin="163,1,0,0" VerticalAlignment="Top" Width="215"/>
+                <Button x:Name="btnCache" ToolTip="Recuperar Caché"  Content="Recuperar" HorizontalAlignment="Left" Margin="560,1,0,0" VerticalAlignment="Top" Width="78" Click="BtnCache_Click" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" FontWeight="Normal"/>
+
+            </Grid>
+        </GroupBox>
+        <GroupBox x:Name="groupBox_Copy" Header="Seleccionar Plato" Margin="39,10,41,0" VerticalAlignment="Top" Height="289" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
+            <Grid HorizontalAlignment="Left" Height="263" VerticalAlignment="Top" Width="718" Margin="0,-2,0,-7.667" Background="{x:Null}">
+
+                <DataGrid x:Name="dgLista" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Height="163" Width="698" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" LoadingRow="dgLista_LoadingRow"  >
+
+                    <DataGrid.Resources>
+                        <Style TargetType="{x:Type DataGridCell}">
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Background" Value="#FFFAA575" />
+                                    <Setter Property="Foreground" Value="Black" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGrid.Resources>
+                </DataGrid>
+                <Button x:Name="btnRefrescar" ToolTip="Refrecar"  HorizontalAlignment="Left"  VerticalAlignment="Top" Width="36"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Height="36" BorderBrush="Black" Click="btnRefrescar_Click" Margin="672,214,0,0"  >
+                    <Button.Background>
+                        <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="btnPasar" ToolTip="Traspasar Información"  Content="Seleccionar" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="78"  FontWeight="Normal" Click="btnPasar_Click" mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Margin="13,221,0,-28"/>
+                <ComboBox x:Name="cbofiltro" HorizontalAlignment="Left" Margin="102,10,0,0" VerticalAlignment="Top" Width="156" FontWeight="Normal"/>
+                <Button x:Name="btnFiltrar" ToolTip="Filtrar Información"  Content="Filtrar" HorizontalAlignment="Left" Margin="282,10,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnFiltrar_Click"/>
+                <Label x:Name="label_Copy2" Content="Categoria:" HorizontalAlignment="Left" Margin="13,10,0,0" VerticalAlignment="Top" FontSize="12"/>
+
+            </Grid>
+        </GroupBox>
     </Grid>
-</Page>
+</Controls:MetroWindow>
